--- a/styles/screen.scss
+++ b/styles/screen.scss
@@ -1,6 +1,8 @@
 @use './variables.scss' as v;
 
 .screen {
+    overflow: hidden;
+    white-space: nowrap;
     text-overflow: ellipsis;
 
     margin-block-start: 24px;
